--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE HTML>
+<html>
 <head>
-  <meta charset="utf-8" />
-  <title></title>
-  <link rel="stylesheet" href="style.css" />
+    <title>WebAdmin</title>
+    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+    <link rel="stylesheet" href="style.css"></link>
+<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet"></link>
 </head>
 <body>
- ...    
+    Hello! World!
 </body>
 </html>
